[package]
name = "swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.143"
solana-sdk = "1.10.29"
solana-client = "1.10.29"
solana-address-lookup-table-program = "1.10.1"
base64 = "0.13.0"
solana-transaction-status = "1.11.1"
bincode = "1.3.3"
